force-app/main/default/objects/JBCXM__Subscription_Frequency__c/JBCXM__Subscription_Frequency__c.object-meta.xml
<CustomObject>
    <label>Subscription Frequency</label>
    <nameField>
        <label>Subscription Frequency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Frequency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>