force-app/main/default/objects/JBCXM__Subscription_Frequency__c/fields/JBCXM__Daily__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Daily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily</label>
    <type>Checkbox</type>
</CustomField>