force-app/main/default/objects/JBCXM__Subscription_Frequency__c/fields/JBCXM__Never__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Never__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Never</label>
    <type>Checkbox</type>
</CustomField>