force-app/main/default/objects/JBCXM__Subscription_Frequency__c/fields/JBCXM__Real_Time__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Real_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Real Time</label>
    <type>Checkbox</type>
</CustomField>