force-app/main/default/objects/JBCXM__Subscription_Frequency__c/fields/JBCXM__UserID__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscription_Frequency</relationshipName>
    <type>Lookup</type>
</CustomField>