force-app/main/default/objects/JBCXM__Subscription_Frequency__c/fields/JBCXM__Weekly__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Weekly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly</label>
    <type>Checkbox</type>
</CustomField>