force-app/main/default/objects/JBCXM__Subscription_Frequency__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__UserID__c</columns>
    <columns>JBCXM__Daily__c</columns>
    <columns>JBCXM__Never__c</columns>
    <columns>JBCXM__Real_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>